IA Ejemplo.txt
>>> float (17.5)
17.5
>>> float ("17.5")
17.5
>>> m = "fsdfs"
>>> m
'fsdfs'
>>> m
'fsdfs'
>>> m
'fsdfs'
>>> m
'fsdfs'
>>> m
'fsdfs'
>>> int (False)
0
>>> int (false)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'false' is not defined
>>> int  (False)
0
>>> str (564564)
'564564'
>>> str (56)
'56'
>>> clear
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'clear' is not defined
>>> clear()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'clear' is not defined
>>> 2 + 4 * 3 / 2 ** 4
2.75
>>> fruta * 1000
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'fruta' is not defined
>>> otra_fruta = '3
  File "<stdin>", line 1
    otra_fruta = '3
                  ^
SyntaxError: EOL while scanning string literal
>>> otra_fruta = 'Manzana'
>>> fruta = 'zana'
>>> fruta + otra_fruta
'zanaManzana'
>>> fruta + otra_fruta * 10
'zanaManzanaManzanaManzanaManzanaManzanaManzanaManzanaManzanaManzanaManzana'
>>> (fruta + otra_fruta) * 10
'zanaManzanazanaManzanazanaManzanazanaManzanazanaManzanazanaManzanazanaManzanazanaManzanazanaManzanazanaManzana'
>>> nombre_completo = input("Ingresa Nombre Completo")
Ingresa Nombre Completo
>>> nombre_completo = input("Ingresa Nombre Completo: ")
Ingresa Nombre Completo: Rudito
>>> nombre_completo
'Rudito'
>>> numero = input("Ingresa Numero: ")
Ingresa Numero: 25
>>> numero
'25'
>>> int(numero)
25
>>> num = int(input("Ingrese Numero: "))
Ingrese Numero: 25
>>> type(num)
<class 'int'>
>>> radio = float(input("cual es el radio del circulo"))
cual es el radio del circulo13.5
>>> area = 3.14159 * radio ** 2
>>> print ("el area del circulo es :", area)
el area del circulo es : 572.5547775
>>> area
572.5547775
>>>
------------------------------------------------------------
>>> for nombre in ["Juan","Pedro","Maria","Karla"]:
...   invitar = "Hola " + nombre + "Estas Invitado a mi fiesta"
...   print(invitar)
...
Hola JuanEstas Invitado a mi fiesta
Hola PedroEstas Invitado a mi fiesta
Hola MariaEstas Invitado a mi fiesta
Hola KarlaEstas Invitado a mi fiesta
>>>
-------------------------------------------------------------
>>> for i in[1,2,3,4,5]:
...   print(i)
...
1
2
3
4
5
-----------------------------------------------------
>>> for i in range(6):
...   print(i)
...
0
1
2
3
4
5
--------------------------------------------------------
>>> for i in range(5, 10):
...   print(i)
...
5------------------------------------------------------------
>>> lista_compleja = ["Hola", 2.0, 5, [10,20]]
>>> lista_compleja[2]
5
>>> len(lista_compleja)
4
>>> 5 in lista_complejo
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'lista_complejo' is not defined
>>> 5 in lista_compleja
True
>>> 89 in lista_compleja
False
>>> a = [1,2,3,4]
>>> b = [5,6,7,8,9]
>>> c = a + b
>>> c
[1, 2, 3, 4, 5, 6, 7, 8, 9]
>>> [1] = 10
  File "<stdin>", line 1
SyntaxError: cannot assign to literal
>>> [1]  10
  File "<stdin>", line 1
    [1]  10
         ^
SyntaxError: invalid syntax
>>> [1] * 10
[1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
>>> lista_compleja * 3
['Hola', 2.0, 5, [10, 20], 'Hola', 2.0, 5, [10, 20], 'Hola', 2.0, 5, [10, 20]]
>>> #Slice
>>> letras = ["a","b","c","d"]
>>> letras
['a', 'b', 'c', 'd']
>>> letras [1:3]
['b', 'c']
>>> letras [:3]
['a', 'b', 'c']
>>> letras [3:]
['d']
>>> letras [-1]
'd'
>>> letras [-2:]
['c', 'd']
>>> letras [:-2]
['a', 'b']
>>> letras [::-1]
['d', 'c', 'b', 'a']
>>> letras [1::-1]
['b', 'a']
>>> letras [0:5:2]
['a', 'c']
>>> letras [0:5:*2]
  File "<stdin>", line 1
    letras [0:5:*2]
                ^
SyntaxError: invalid syntax
>>> letras [0:5:2]
['a', 'c']
>>> letras[slice]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: list indices must be integers or slices, not type
>>> letras[slice(start,stop,step)]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'start' is not defined
>>>
*******************************************************************
>>> cuenta = ["uno","dos","tre","cuatro"]
>>> cuenta
['uno', 'dos', 'tre', 'cuatro']
>>> len(cuenta)
4
>>> del cuenta[1]
>>> cuenta
['uno', 'tre', 'cuatro']
>>> cuenta.append["cinco"]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: 'builtin_function_or_method' object is not subscriptable
>>> cuenta,append["cinco"]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'append' is not defined
>>> cuenta.append["cinco"]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: 'builtin_function_or_method' object is not subscriptable
>>> cuenta.append("cinco")
>>> cuenta
['uno', 'tre', 'cuatro', 'cinco']
>>> cuenta.insert(1,"dos")
>>> cuenta
['uno', 'dos', 'tre', 'cuatro', 'cinco']
>>> cuenta.count("cuatro")
1
>>> cuenta.count("cuatros")
0
>>> cuenta.index("cuatros")
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ValueError: 'cuatros' is not in list
>>> cuenta.index("cuatro")
3
>>> c
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'c' is not defined
>>>  a = [1,2,3,4]
  File "<stdin>", line 1
    a = [1,2,3,4]
    ^
IndentationError: unexpected indent
>>> >>> b = [5,6,7,8,9]
  File "<stdin>", line 1
    >>> b = [5,6,7,8,9]
    ^
SyntaxError: invalid syntax
>>>  a = [1,2,3,4]
  File "<stdin>", line 1
    a = [1,2,3,4]
    ^
IndentationError: unexpected indent
>>> >>> b = [5,6,7,8,9]
  File "<stdin>", line 1
    >>> b = [5,6,7,8,9]
    ^
SyntaxError: invalid syntax
>>> >>> c = a + b
  File "<stdin>", line 1
    >>> c = a + b
    ^
SyntaxError: invalid syntax
>>> a = [1,2,3,4]
>>> b = [5,6,7,8,9]
>>> c = a + b
>>> c[::-1]
[9, 8, 7, 6, 5, 4, 3, 2, 1]
>>> c
[1, 2, 3, 4, 5, 6, 7, 8, 9]
>>> c.reverse()
>>> c
[9, 8, 7, 6, 5, 4, 3, 2, 1]
>>> c.sort()
>>> c
[1, 2, 3, 4, 5, 6, 7, 8, 9]
>>> d = [3,468,4,6,6,0,64,7]
>>> d.sort()
>>> d
[0, 3, 4, 6, 6, 7, 64, 468]
>>>